--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   frontend:
     build:
@@ -9,6 +7,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    env_file:
+      - backend/.env
 
   backend:
     build:
@@ -16,3 +16,5 @@ services:
       dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
+    env_file:
+      - frontend/.env
