adding some endpoints and modularizing routes to collect endpoints in modules

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # backend/.env
 
-# Common Flask or FastAPI settings
+# Common FastAPI settings
 SECRET_KEY=your-secret-key
 ENV=production
 DEBUG=False
@@ -13,5 +13,5 @@ DATABASE_URL=sqlite:///./mydb.db
 ALLOWED_ORIGINS=http://localhost:3000
 
 # Other custom keys
-API_KEY=some-external-api-key
-ALLOWED_ORIGINS=http://localhost:3000
+BIBLE_API_KEY=your_api_key_here
+BIBLE_API_BASE=https://api.scripture.api.bible/v1
